[metadata]
name = project_euler
version = 0.0.1
description = Providing Project Euler Solution and associated Library
long_description = file: README.md
keywords = project euler, python
license = MIT License
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[options]
include_package_data = True
install_requires =
    flake8
    numpy
    pytest
packages =
    project_euler
    project_euler.library
    project_euler.solutions
scripts =
    project_euler/solutions/solve.py
    project_euler/solutions/convert.py