[metadata]
name = project_euler
version = 0.0.1
description = Providing Project Euler Solution and associated Library
long_description = file: README.md
keywords = project euler, python
license = MIT License
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[options]
include_package_data = True
install_requires =
    docopt>=0.6.2
    flake8>=3.3.0
    pytest>=3.0.6
    pyyaml>=3.12
    tox>=2.6.0
packages =
    project_euler
    project_euler.library
    project_euler.solutions
scripts =
    project_euler/solutions/solve.py
    project_euler/solutions/convert.py