[metadata]
name = project_euler
version = 0.0.1
description = Providing Project Euler Solution and associated Library
long_description = file: README.md
keywords = project euler, python
license = MIT License
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[options]
include_package_data = True
install_requires =
    docopt>=0.6.2
    flake8>=3.3.0
    numpy>=1.12.0
    pytest>=3.0.6
    pytest-cov>=2.4.0
    pyyaml>=3.12
    Sphinx>=1.5.2
    tox>=2.6.0
    termcolor>=1.1.0
packages =
    project_euler
    project_euler.library
    project_euler.solutions
scripts =
    project_euler/framework/solve
    project_euler/framework/convert
    project_euler/framework/profile

[options.extras_require]
test=
    pytest
    pytest-cov
    pytest-xdist
    setuptools_scm
    flake8
